# Parliamentary_Scheduler

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-lib.sh
.github/workflows/: cmake-multi-platform.yml
docs/: CallbackFramework.md  CallbackImplementation.md  ClientBehavior.md  MessageEncoding.md  MsgStructure.md  MsgTypes.md  Parser.md  ServerHierarchy.md  TapeQueuing.md  TestIntegration.md
examples/: callback_example.c
include/body/: body.h
include/client/: client.h
include/msg/: body.h  header.h  msg.h  payload.h
include/protocols/internal/: copy.h  ping.h  read.h  write.h
include/scheduler/: tape.h
include/server/: server.h
src/: main.c
src/body/: body.c
src/callbacks/: callback_manager.c
src/client/: client.c
src/msg/: body.c  header.c  msg.c  payload.c
src/protocols/internal/: copy.c  ping.c  read.c  write.c
src/scheduler/: tape.c
src/server/: server.c  socket.c
test/callbacks/: test_callback_manager.c
test/client/: test_client.c
test/msg/: test_msg.c
test/protocols/internal/: test_copy.c  test_ping.c  test_read.c  test_write.c
test/scheduler/: test_integration.c  test_suite.c  test_tape.c
test/server/: test_server.c
